Support for incremental GTFS-realtime updates.